Fixed navbar to not overlap.

--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -2104,7 +2104,7 @@
 		text-align: center;
 		position: absolute;
 		top: 0;
-		height: 4em;
+		height: 2em;
 		line-height: 4em;
 	}
 
@@ -2113,10 +2113,12 @@
 		}
 
 			#nav > ul > li {
-				display: inline-block;
+				display: inline;
 				margin-top: .25em;
+				margin-left: 1.5em;
 				margin-right: 2em;
 				position: relative;
+				padding: 0.3em .5em 0.3em .5em;
 			}
 
 				#nav > ul > li > ul {
@@ -2130,7 +2132,6 @@
 					border: 0;
 					border: solid 1px rgba(255, 255, 255, 0);
 					border-radius: 0.35em;
-					padding: 0.3em 1em 0.3em 1em;
 					-moz-transition: border-color 0.25s ease-in-out, background-color 0.25s ease-in-out;
 					-webkit-transition: border-color 0.25s ease-in-out, background-color 0.25s ease-in-out;
 					-o-transition: border-color 0.25s ease-in-out, background-color 0.25s ease-in-out;
@@ -2145,15 +2146,15 @@
 				}
 
 				#nav > ul > li:first-child {
-					margin-left: 8em;
+					margin-left: 5%;
 				}
 
 				#nav > ul > li:last-child {
-					margin-left: 0;
+					margin-right: 0;
 				}
 
 				#nav > ul > li.break {
-					margin-left: 18em;
+					margin-left: 35%;
 				}
 
 	.dropotron {
@@ -2380,7 +2381,7 @@
 
 /* Normal */
 
-	@media screen and (max-width: 1280px) {
+	@media screen {
 
 		/* Basic */
 
@@ -2417,218 +2418,6 @@
 
 	}
 
-/* Narrow */
-
-	@media screen and (max-width: 1080px) {
-
-		/* Sections/Article */
-
-			header br {
-				display: none;
-			}
-
-		/* Button */
-
-			input[type="button"],
-			input[type="submit"],
-			input[type="reset"],
-			button,
-			.button {
-				padding-left: 1.25em;
-				padding-right: 1.25em;
-			}
-
-		/* Wrappers */
-
-			.wrapper {
-				padding: 4em 2em 4em 2em;
-			}
-
-			#header-wrapper {
-				padding: 5em 0 1em 0;
-			}
-
-			.homepage #header-wrapper {
-				padding: 5em 0 4em 0;
-			}
-
-			#promo-wrapper {
-				padding: 2em;
-			}
-
-			#footer-wrapper {
-				padding: 4em 2em 4em 2em;
-			}
-
-		/* Header */
-
-			#nav {
-				position: relative;
-				margin: 0.5em 0 0 0;
-				line-height: 2.25em;
-				height: 2.25em;
-			}
-
-				#nav > ul > li {
-					margin-left: 0;
-				}
-
-					#nav > ul > li.break {
-						margin-left: 0;
-					}
-
-			.dropotron.level-0 {
-				margin-top: 1.1em;
-			}
-
-		/* Hero */
-
-			#hero {
-				padding: 3.5em 4em 0 4em;
-			}
-
-				#hero h2 {
-					font-size: 2.75em;
-				}
-
-				#hero p br {
-					display: none;
-				}
-
-		/* Promo */
-
-			#promo {
-				padding: 1.75em 2.5em 1.75em 2.5em;
-				display: inline-block;
-			}
-
-				#promo .button {
-					font-size: 1.25em;
-				}
-
-				#promo h2 {
-					display: block;
-					margin: 0 0 1em 0;
-					font-size: 1.5em;
-				}
-
-		/* Copyright */
-
-			#copyright {
-				padding-top: 2em;
-				margin-top: 3em;
-			}
-
-	}
-
-/* Narrower */
-
-	@media screen and (max-width: 820px) {
-
-		/* Basic */
-
-			body, input, textarea, select {
-				line-height: 1.5em;
-				font-size: 14pt;
-			}
-
-			span.extra {
-				display: inline;
-			}
-
-			.features {
-				margin-bottom: 0;
-			}
-
-		/* Sections/Article */
-
-			section, article {
-				margin-bottom: 3em;
-			}
-
-			.row > section, .row > article {
-				margin-bottom: 3em;
-			}
-
-			section:last-child,
-			article:last-child {
-				margin-bottom: 0;
-			}
-
-			.row > section:last-child,
-			.row > article:last-child {
-				margin-bottom: 0;
-			}
-
-		/* List */
-
-			ul.menu {
-				text-align: center;
-			}
-
-				ul.menu li {
-					display: block;
-					border: 0;
-					padding: 0;
-					margin: 0;
-					line-height: 2em;
-				}
-
-					ul.menu li:first-child {
-						border-top: 0;
-					}
-
-			ul.actions.major {
-				padding-top: 2em;
-			}
-
-		/* Header */
-
-			#nav {
-				font-size: 0.9em;
-			}
-
-				#nav > ul > li > span, #nav > ul > li > a {
-					padding: 0.25em 0.5em 0.25em 0.5em;
-				}
-
-		/* Hero */
-
-			#hero h2 {
-				font-size: 2.5em;
-			}
-
-		/* Main */
-
-			#main {
-				padding-bottom: 0;
-			}
-
-		/* Content */
-
-			#content {
-				margin-bottom: 3em;
-			}
-
-		/* Sidebar */
-
-			#sidebar {
-				margin-bottom: 3em;
-			}
-
-				#sidebar section {
-					border-top: 0;
-					margin-top: 0;
-					padding-top: 1em;
-				}
-
-		/* Footer */
-
-			#footer header.major {
-				margin-bottom: 1.5em;
-			}
-
-	}
 
 /* Mobile */
 
